# smart-log-analyser

./: .env  .gitignore  RAG_Stage1_README.md  README.md  list_models.py  pyproject.toml  requirements.txt  run_analyzer.py
config/: config.yaml
smart_log_analyser/: generator.py  index.py  main.py
smart_log_analyser/analysis/: llm_analyzer.py  prompt_manager.py  rag_chain.py
smart_log_analyser/core/: __init__.py  config.py  smart_log_analyzer.py
smart_log_analyser/data/: __init__.py  log_parser.py  sample_logs.py
smart_log_analyser/embedding/: chunker.py  embedder.py  embedder_simple.py
smart_log_analyser/vector_store/: base.py  chroma_store.py  qdrant_store.py
src/: __init__.py  generator.py  index.py  main.py  retriever.py  utils.py
src/analysis/: __init__.py  llm_analyzer.py
src/data/: __init__.py
src/embedding/: __init__.py  chunker.py  embedder.py
src/vector_store/: __init__.py  chroma_store.py
tests/: __init__.py  test_embedding.py  test_llm_analyzer.py  test_search.py
